<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/bg"
    >

    <ImageView
        android:layout_width="257dp"
        android:layout_height="183dp"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:hintEnabled="false"
        android:layout_marginTop="40dp"
        android:textColorHint="#fff"
        >
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_email"
            android:drawableLeft="@drawable/baseline_email_black_18dp"
            android:drawablePadding="6dp"
            android:textColorHint="#fff"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        android:textColorHint="#fff"
        >
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_vpn_key_black_18dp"
            android:drawablePadding="6dp"
            android:textColorHint="#fff"
            android:textColor="#fff"
            />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_sign_in"
        android:textAllCaps="false"
        android:background="@drawable/shape"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#fff"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_not_having_an_account"
            android:textSize="14sp"
            android:textColor="@color/tabindicatorcolor"
            android:textStyle="bold"
            />


        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_register"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/tabtextcolor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_forgot_password"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/tabtextcolor"
            />

    </LinearLayout>
</LinearLayout>