<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/bg"
    >

    <ImageView
        android:layout_width="257dp"
        android:layout_height="183dp"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textColorHint="#fff"
        >
        <EditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_email"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/baseline_email_black_18dp"
            android:drawablePadding="6dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loading_forgot_password"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_reset_password"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/shape"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_already_have_a_account"
            android:textSize="14sp"
            android:textColor="@color/tabindicatorcolor"
            android:textStyle="bold"
            />


        <Button
            android:id="@+id/btn_r_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_log_in"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/tabtextcolor"
            />

    </LinearLayout>





</LinearLayout>