<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventSheet">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >

            <ImageView
                android:id="@+id/e_sheet_image"
                app:layout_collapseMode="parallax"
                android:src="@drawable/firework"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/e_sheet_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:title="@string/recent_news"
                app:layout_collapseMode="pin"
                />


        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/e_sheet_name"
                    android:padding="12dp"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/recent_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingLeft="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/e_sheet_date_event"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/publish_date"
                        android:layout_width="0dp"
                        android:layout_weight="9"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_access_time_black_24dp"
                        android:drawablePadding="2dp"
                        />



                </LinearLayout>

                <TextView
                    android:id="@+id/e_sheet_likes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:drawableLeft="@drawable/ic_favorite_black_24dp"
                    android:drawablePadding="2dp"
                    android:padding="12dp"
                    android:text="likes"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/e_sheet_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:drawableLeft="@drawable/baseline_room_black_18dp"
                    android:drawablePadding="2dp"
                    android:padding="12dp"
                    android:text="address"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/e_sheet_description"
                    android:padding="12dp"
                    android:textSize="13sp"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_marginTop="12dp"
                    android:text="@string/in_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/e_sheet_like"
        android:src="@drawable/is_not_liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        />

</android.support.design.widget.CoordinatorLayout>